--- a/ATAutoLayout/Base.lproj/Main.storyboard
+++ b/ATAutoLayout/Base.lproj/Main.storyboard
@@ -16,7 +16,21 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W5e-Wk-skH">
+                                <rect key="frame" x="180" y="236" width="240" height="128"/>
+                                <color key="backgroundColor" red="1" green="0.64853573293375377" blue="0.32508009689276385" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="VW6-uD-98Y"/>
+                                    <constraint firstAttribute="width" constant="240" id="aOM-lI-3Rd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="W5e-Wk-skH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7dF-uD-uOl"/>
+                            <constraint firstItem="W5e-Wk-skH" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Vg3-vG-DiF"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
